--- a/aspnet-simple-restapi/appsettings.json
+++ b/aspnet-simple-restapi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLExpress;Database=aspnet_simple_restapi;Trusted_Connection=true"
+  }
 }
