many controllers added

--- a/aspnet-simple-restapi/appsettings.json
+++ b/aspnet-simple-restapi/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=.\\SQLExpress;Database=aspnet_simple_restapi;Trusted_Connection=true"
+  },
+  "JwtSettings": {
+    "SecretKey": "secretKeyMust16CharNjay123"
   }
 }
