--- a/aspnet-simple-restapi/Properties/launchSettings.json
+++ b/aspnet-simple-restapi/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:12593",
+      "applicationUrl": "http://0.0.0.0:12593",
       "sslPort": 44317
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7053;http://localhost:5053",
+      "applicationUrl": "https://0.0.0.0:7053;http://0.0.0.0:5053",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
